<resources>
    <string name="app_name">Coreinvent</string>
    <!-- Strings related to login -->
    <string name="prompt_email">usuario</string>
    <string name="prompt_password">contraseña</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Usuario no válido</string>
    <string name="invalid_password">La Contraseña debe tener más de 5 caracteres</string>
    <string name="login_failed">"El usuario o la contraseña son incorrectos"</string>
    <string name="time_out">"No se pudo establecer conexión con el servidor"</string>
    <string name="title_activity_main">Coreinvent</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="altas_title">Altas</string>
    <string name="bajas_title">Bajas</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="family">Familia</string>
    <string name="sub_family">Sub Familia</string>
    <string name="type">Tipo</string>
    <string name="description">Descripción ampliada</string>
    <string name="center">Centro</string>
    <string name="edifice">Edificio</string>
    <string name="level">Nivel</string>
    <string name="space">Espacio</string>
    <string name="brand">Marca</string>
    <string name="model">Modelo</string>
    <string name="serie">Número de serie</string>
    <string name="characteristics">Características</string>
    <string name="plate">Matrícula</string>
    <string name="frame_number">Número de bastidor</string>
    <string name="address">Dirección</string>
    <string name="postal_code">Código postal</string>
    <string name="surface">Superficie</string>
    <string name="length">Longitud</string>
    <string name="width">Ancho</string>
    <string name="heigth">Alto</string>
    <string name="depth">Profundidad</string>
    <string name="measures">Medidas</string>
    <string name="in_use_date">Fecha instalación/inicio uso</string>
    <string name="scan_tag">Escanear Etiqueta</string>
    <string name="tag">Etiqueta</string>
    <string name="virtual_tag">Asignar etiqueta virtual</string>
    <string name="search">Buscar</string>

    <!-- Strings related to risk level -->
    <string name="none">Ninguno</string>
    <string name="low">Bajo</string>
    <string name="medium">Medio</string>
    <string name="high">Alto</string>
    <string name="critical">Crítico</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
