<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.alta.ClassificationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputLayout

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/family"
                android:layout_margin="5dp"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusTopStart="20dp"
                app:endIconTint="@color/colorText"
                app:boxStrokeColor="@color/secondaryLightVariant"
                android:textColorHint="@color/colorText"
                app:hintTextColor="@color/onBackground">

                <AutoCompleteTextView
                    android:textColor="@color/onBackground"
                    android:inputType="none"
                    android:id="@+id/family_dropdown"
                    android:focusable="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sub_family"
                android:layout_margin="5dp"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusTopStart="20dp"
                app:endIconTint="@color/colorText"
                app:boxStrokeColor="@color/secondaryLightVariant"
                android:textColorHint="@color/colorText"
                app:hintTextColor="@color/onBackground">

                <AutoCompleteTextView
                    android:inputType="none"
                    android:focusable="false"
                    android:textColor="@color/onBackground"
                    android:id="@+id/sub_family_dropdown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusTopStart="20dp"
                app:endIconTint="@color/colorText"
                app:boxStrokeColor="@color/secondaryLightVariant"
                android:textColorHint="@color/colorText"
                app:hintTextColor="@color/onBackground"
                android:hint="@string/type">

                <AutoCompleteTextView
                    android:id="@+id/type_dropdown"
                    android:inputType="none"
                    android:textColor="@color/onBackground"
                    android:focusable="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>


        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/back_img"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:tint="@color/secondaryLightVariant"
                app:srcCompat="@drawable/ic_arrow_back_black_24dp" />

            <ImageView
                android:id="@+id/forward_img"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:tint="@color/secondaryLightVariant"
                app:srcCompat="@drawable/ic_arrow_forward_black_24dp" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>